Stuck trying to handle file uploads

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -38,5 +38,9 @@
   "Machine": {
     "dataSource": "postgres",
     "public": true
-  }
+  },
+  "container": {
+    "dataSource": "storage",
+    "public": true
+  }  
 }
