--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "exceljs": "^1.6.3",
+    "express-fileupload": "^1.1.1-alpha.1",
     "helmet": "^3.10.0",
     "loopback": "^3.22.0",
     "loopback-boot": "^2.6.5",
