--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "migrate": "node server/create-lb-tables.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "exceljs": "^1.6.3",
@@ -22,6 +23,7 @@
     "loopback-component-explorer": "^6.2.0",
     "loopback-component-storage": "^3.5.0",
     "loopback-connector-postgresql": "^3.5.0",
+    "multer": "^1.4.1",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0",
     "unstream": "^2.0.0"
